fixing gap in product page

--- a/products-list/products-list-css/footer.css
+++ b/products-list/products-list-css/footer.css
@@ -1,4 +1,4 @@
 footer{
     position: relative;
-    top: 30rem;
+    top: 50rem;
 }
